--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.7.0'  # Use Node.js v22.7.0
+          node-version: '22.7.0'
 
       - name: Install dependencies
         run: npm install
@@ -39,10 +39,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.7.0'  # Use Node.js v22.7.0
+          node-version: '22.7.0'
 
       - name: Install dependencies
         run: npm install
+
+      - name: List root directory contents (for debugging)
+        run: ls -la
+
+      - name: List build directory contents (for debugging)
+        run: ls -la build
 
       - name: Deploy to GitHub Pages
         env:
@@ -50,4 +56,4 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          npx gh-pages -d build  # Using npx to run local gh-pages
+          npx gh-pages -d build  # Deploy using npx
